Fixed back button aligns with max-width of page. Removed the necessity of "magic values" for height of header. Started with Footer-component

--- a/src/features/common/templates/AuthenticatedSubPageTemplate.scss
+++ b/src/features/common/templates/AuthenticatedSubPageTemplate.scss
@@ -12,7 +12,13 @@
         text-align: center;
     }
     .hero-header {
-        margin: 10px 0 30px;
+        display: flex;
+        flex-flow: column;
+        position: relative;
+        flex-wrap: nowrap;
+        max-width: 960px;
+        width: 100%;
+        margin: 0 0 30px;
 
         @include mobile() {
             margin: 0 0 30px 0;
@@ -43,13 +49,10 @@
         }
 
         h1 {
-            position: absolute;
-            left: 0;
             font-family: 'Campton', sans-serif;
             color: $beige140;
             font-weight: $weight-medium;
             font-size: 26px;
-            text-align: center;
             width: 100%;
             margin: 0;
             padding: 0;
@@ -66,6 +69,10 @@
     }
 
     .page-container {
+        display: flex;
+        align-items: center;
+        flex-flow: column;
+
         @include tablet() {
             margin-top: $navigation-height + 10;
         }
